--- a/templates/analyzer/index.html
+++ b/templates/analyzer/index.html
@@ -1,62 +1,26 @@
 {% load static %}
+<html lang="en">
 <head>
     <title>Графики</title>
     <link rel="stylesheet" href="{% static 'Chart.css' %}">
 </head>
+<body>
 <div style="max-width: 90%; margin: 4% auto">
-    <canvas id="bar_chart" width="8" height="3"></canvas>
-
+    <canvas id="myChart" width="8" height="3"></canvas>
 </div>
 
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
 <script type="text/javascript" src="{% static 'Chart.js' %}"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
-
-<script>
-    const config = {
-        type: 'bar',
-        data: {
-            labels: [
-                ['Big', 'Data'],
-                ['Носки с', 'сандалиями'],
-                ['Искусственный', 'интеллект'],
-                ['Разумное', 'потребление'],
-                ['5G', 'internet'],
-                ['Пустые', 'города'],
-                ['Last Of', 'Us 2'],
-                'LGBT',
-                'BTS',
-                'COVID19'
-            ],
-            datasets: [{
-                data: [16, 32, 64, 128, 256, 277, 325, 433, 629, 666],
-                backgroundColor: 'rgba(255, 99, 132, 1)',
-                borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            responsive: true,
-            legend: {
-                display: false
-            },
-            title: {
-                display: true,
-                text: 'Chart of university tags',
-                fontSize: 20
-            },
-            animation: {
-                duration: 1200,
-                easing: 'easeOutSine'
-            }
-        }
-    };
-
-
-    window.onload = function() {
-        const ctx = document.getElementById('bar_chart').getContext('2d');
-        window.myLine = new Chart(ctx, config);
-    };
-
+<script type="text/javascript" src="{% static 'chartjs-plugin-colorschemes.js' %}"></script>
+<script type="text/javascript">
+    $.get('{% url "line_chart_json" %}', function (data) {
+        var ctx = $("#myChart").get(0).getContext("2d");
+        new Chart(ctx, {
+            type: 'bar',
+            data: data.data,
+            options: data.options
+        });
+    });
 </script>
+</body>
+</html>
