--- a/templates/analyzer/index.html
+++ b/templates/analyzer/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div style="max-width: 90%; margin: 4% auto">
-    <canvas id="myChart" width="8" height="3"></canvas>
+    <canvas id="myChart" width="11" height="5"></canvas>
 </div>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="{% static 'chartjs-plugin-colorschemes.js' %}"></script>
 <script type="text/javascript">
     $.get('{% url "line_chart_json" %}', function (data) {
+        Chart.defaults.global.defaultFontSize = 24;
         var ctx = $("#myChart").get(0).getContext("2d");
         new Chart(ctx, {
             type: 'bar',
